# fastapi-and-logging

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fastapi_and_logging/: __init__.py  enums.py  helpers.py  incoming.py  logging.py  logging_route.py
fastapi_and_logging/fastapi/: __init__.py  error.py  exception.py  incoming.py  route.py
fastapi_and_logging/http_clients/: __init__.py  aiohttp.py  httpx.py
